Set source=enabled; draft=false

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -47,8 +47,10 @@ signs:
       - "${signature}"
       - "--detach-sign"
       - "${artifact}"
+source:
+  enabled: true
 release:
   # If you want to manually examine the release before its live, uncomment this line:
-  draft: true
+  draft: false
 changelog:
   skip: true
