--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,4 +1,5 @@
 # Visit https://goreleaser.com for documentation on how to customize this
+version: 2
 # behavior.
 before:
   hooks:
@@ -51,4 +52,4 @@ release:
   # If you want to manually examine the release before its live, uncomment this line:
   # draft: true
 changelog:
-  skip: true
+  disable: true
